packages/switchy/schema/test_utils/src/snapshots/switchy_schema_test_utils__snapshots__basic.snap
---
source: packages/switchy/schema/test_utils/src/snapshots.rs
expression: snapshot
---
{
  "test_name": "basic",
  "migration_sequence": [
    "001_initial"
  ]
}
