packages/switchy/schema/test_utils/src/snapshots/switchy_schema_test_utils__snapshots__builder_test.snap
---
source: packages/switchy/schema/test_utils/src/snapshots.rs
expression: snapshot
---
{
  "test_name": "builder_test",
  "migration_sequence": []
}
