packages/switchy/schema/test_utils/src/snapshots/switchy_schema_test_utils__snapshots__comprehensive_test.snap
---
source: packages/switchy/schema/test_utils/src/snapshots.rs
expression: snapshot
---
{
  "test_name": "comprehensive_test",
  "migration_sequence": [],
  "schema": {
    "tables": {}
  },
  "data_samples": null
}
