packages/switchy/schema/test_utils/src/snapshots/switchy_schema_test_utils__snapshots__data_migration_result.snap
---
source: packages/switchy/schema/test_utils/src/snapshots.rs
expression: snapshot
---
{
  "test_name": "data_migration_result",
  "migration_sequence": [
    "001_create_users",
    "002_add_email"
  ],
  "schema": {
    "tables": {
      "users": {
        "columns": [
          {
            "name": "email",
            "data_type": "Text",
            "nullable": true,
            "default_value": null,
            "primary_key": false
          },
          {
            "name": "id",
            "data_type": "BigInt",
            "nullable": true,
            "default_value": null,
            "primary_key": true
          },
          {
            "name": "name",
            "data_type": "Text",
            "nullable": false,
            "default_value": null,
            "primary_key": false
          }
        ],
        "indexes": []
      }
    }
  },
  "data_samples": {
    "users": [
      {
        "email": null,
        "id": "[ID]",
        "name": "test_user"
      }
    ]
  }
}
