packages/switchy/schema/test_utils/src/snapshots/switchy_schema_test_utils__snapshots__default_test.snap
---
source: packages/switchy/schema/test_utils/src/snapshots.rs
expression: snapshot
---
{
  "test_name": "default_test",
  "migration_sequence": []
}
