packages/switchy/schema/test_utils/src/snapshots/switchy_schema_test_utils__snapshots__simple_test.snap
---
source: packages/switchy/schema/test_utils/src/snapshots.rs
expression: snapshot
---
{
  "test_name": "simple_test",
  "migration_sequence": [
    "001_create_table",
    "002_add_column",
    "003_create_index"
  ],
  "schema": {
    "tables": {}
  },
  "data_samples": null
}
