packages/switchy/schema/test_utils/src/snapshots/switchy_schema_test_utils__snapshots__user_migration.snap
---
source: packages/switchy/schema/test_utils/src/snapshots.rs
expression: snapshot
---
{
  "test_name": "user_migration",
  "migration_sequence": [
    "001_create_table",
    "002_add_column",
    "003_create_index"
  ],
  "schema": {
    "tables": {}
  },
  "data_samples": null
}
